final commit week3 project2
