# swagger.json
@@ -167,9 +167,6 @@
           "204": {
             "description": "No Content"
           },
-          "409": {
-            "description": "Conflict"
-          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -408,30 +405,6 @@
         }
       }
     },
-    "/tasks/project/{id}": {
-      "delete": {
-        "tags": [
-          "Tasks"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
     "/users/": {
       "get": {
         "tags": [
@@ -564,9 +537,6 @@
         "responses": {
           "204": {
             "description": "No Content"
-          },
-          "409": {
-            "description": "Conflict"
           },
           "500": {
             "description": "Internal Server Error"
